--- a/package.xml
+++ b/package.xml
@@ -38,7 +38,7 @@
   <build_depend>boost</build_depend>
   <build_depend>rosboost_cfg</build_depend>
   <build_depend>cv_bridge</build_depend>
-  <build_depend>ml_classifiers</build_depend>
+  <!-- <build_depend>ml_classifiers</build_depend> -->
   <build_depend>diagnostic_updater</build_depend>
   <build_depend>diagnostic_msgs</build_depend>
   <build_depend>jsk_topic_tools</build_depend>
@@ -87,7 +87,7 @@
   <exec_depend>rosboost_cfg</exec_depend>
   <exec_depend>rviz</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
-  <exec_depend>ml_classifiers</exec_depend>
+  <!-- <exec_depend>ml_classifiers</exec_depend> -->
   <exec_depend>diagnostic_updater</exec_depend>
   <exec_depend>diagnostic_msgs</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-sklearn</exec_depend>
