--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imagesift
-	base = 2cbb6c0e0
-	trimbase = 
+	base = 1e4796193
+	trimbase = 2cbb6c0e0
 	parent = upstream
 	previous = b874bbd89
