--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = resized_image_transport
-	base = 1c2a6135f
-	trimbase = 
+	base = 71c0c36cb
+	trimbase = 1c2a6135f
 	parent = upstream
 	previous = b874bbd89
