--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_to_spectrogram
 	base = abfd1da71
-	trimbase = 631bdcdef
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
