--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_pcl_ros
-	base = 13ed5f5f4
-	trimbase = 
+	base = d041a8145
+	trimbase = 13ed5f5f4
 	parent = upstream
 	previous = b874bbd89
