--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_classification
 	base = a80d4c179
-	trimbase = 6c9ca1610
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
