--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = checkerboard_detector
 	base = e0b50abb2
-	trimbase = e5c63943a
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
