--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition_utils
 	base = 74134869d
-	trimbase = f417df0b7
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
