--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition_utils
-	base = 826a7cdef
-	trimbase = 
+	base = af7059a9c
+	trimbase = 826a7cdef
 	parent = upstream
 	previous = b874bbd89
