--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_perception
 	base = f48ae7fdc
-	trimbase = cebe00315
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
