--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_perception
-	base = 0212706fa
-	trimbase = 
+	base = 89251682d
+	trimbase = 0212706fa
 	parent = upstream
 	previous = b874bbd89
