--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_pcl_ros_utils
-	base = 55da2be82
-	trimbase = 
+	base = de42e735b
+	trimbase = 55da2be82
 	parent = upstream
 	previous = b874bbd89
