--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imagesift
-	base = 71d560f60
-	trimbase = 
+	base = 8fff76d07
+	trimbase = 71d560f60
 	parent = upstream
 	previous = 07994064c
