--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = resized_image_transport
-	base = d8585a75e
-	trimbase = 
+	base = f06bfdaa9
+	trimbase = d8585a75e
 	parent = upstream
 	previous = 07994064c
