--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_to_spectrogram
 	base = 331197548
-	trimbase = 92bdffefd
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
