--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_to_spectrogram
-	base = 0410f4741
-	trimbase = 
+	base = 320ed981d
+	trimbase = 0410f4741
 	parent = upstream
 	previous = 07994064c
