--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_pcl_ros
-	base = b32c679d4
-	trimbase = 
+	base = abf3f01d5
+	trimbase = b32c679d4
 	parent = upstream
 	previous = 07994064c
