--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition
 	base = 417cd4b1c
-	trimbase = 050340fd6
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
