--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_classification
 	base = ca7d0acde
-	trimbase = 5be89babb
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
