--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = checkerboard_detector
 	base = dd5d2996e
-	trimbase = 2072106d1
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
