--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = checkerboard_detector
-	base = d28057b61
-	trimbase = 
+	base = f20037c24
+	trimbase = d28057b61
 	parent = upstream
 	previous = 07994064c
