--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition_utils
-	base = bae64f130
-	trimbase = 
+	base = 1ede2a9b5
+	trimbase = bae64f130
 	parent = upstream
 	previous = 07994064c
