--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_perception
-	base = e61546462
-	trimbase = 
+	base = d94eebc00
+	trimbase = e61546462
 	parent = upstream
 	previous = 07994064c
