--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition_msgs
 	base = 8e9f91fa8
-	trimbase = 1e38c1a70
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
