--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition_msgs
-	base = fa5453b5a
-	trimbase = 
+	base = 9f2e0a03d
+	trimbase = fa5453b5a
 	parent = upstream
 	previous = 07994064c
