--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_pcl_ros_utils
 	base = de42e735b
-	trimbase = 55da2be82
+	trimbase = 
 	parent = upstream
 	previous = b874bbd89
