--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fecde7458
+	base = 0659221d7
 	trimbase = 
 	parent = release/noetic/depth_image_publisher
-	previous = 
+	previous = fecde7458
