--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 95d809223
+	base = db32275bc
 	trimbase = 
 	parent = debian/noetic/depth_image_publisher
-	previous = 
+	previous = 95d809223
