--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imagesift
-	base = 4668157ca
-	trimbase = 
+	base = 82c21264c
+	trimbase = 4668157ca
 	parent = upstream
 	previous = 5f2f6c31e
