--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = resized_image_transport
-	base = bb48dda52
-	trimbase = 
+	base = 09ac6301f
+	trimbase = bb48dda52
 	parent = upstream
 	previous = 5f2f6c31e
