--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = audio_to_spectrogram
-	base = 9ab9ca435
-	trimbase = 
+	base = a136916a5
+	trimbase = 9ab9ca435
 	parent = upstream
 	previous = 5f2f6c31e
