--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_pcl_ros
-	base = 32340c223
-	trimbase = 
+	base = 5336c1c70
+	trimbase = 32340c223
 	parent = upstream
 	previous = 5f2f6c31e
