--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition
 	base = 97127184f
-	trimbase = e8d8db8c2
+	trimbase = 
 	parent = upstream
 	previous = 07994064c
