--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition
-	base = 4dbaba5cf
-	trimbase = 
+	base = d867d2e1f
+	trimbase = 4dbaba5cf
 	parent = upstream
 	previous = 5f2f6c31e
