--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_classification
 	base = 9c1c30456
-	trimbase = 5a94e211d
+	trimbase = 
 	parent = upstream
 	previous = 07994064c
