--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sound_classification
-	base = f7a14cccd
-	trimbase = 
+	base = e2d48b887
+	trimbase = f7a14cccd
 	parent = upstream
 	previous = 5f2f6c31e
