--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = checkerboard_detector
-	base = 0064008b3
-	trimbase = 
+	base = c8964530a
+	trimbase = 0064008b3
 	parent = upstream
 	previous = 5f2f6c31e
