--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = depth_image_publisher
 	base = fecde7458
-	trimbase = 8d0cfd496
+	trimbase = 
 	parent = upstream
 	previous = 07994064c
