--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = depth_image_publisher
-	base = 8ef4c494a
-	trimbase = 
+	base = c3d037fb8
+	trimbase = 8ef4c494a
 	parent = upstream
 	previous = 5f2f6c31e
