--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition_utils
 	base = 1ede2a9b5
-	trimbase = bae64f130
+	trimbase = 
 	parent = upstream
 	previous = 07994064c
