--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition_utils
-	base = c4d75f8b7
-	trimbase = 
+	base = a245e6e6e
+	trimbase = c4d75f8b7
 	parent = upstream
 	previous = 5f2f6c31e
