--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_perception
 	base = d94eebc00
-	trimbase = e61546462
+	trimbase = 
 	parent = upstream
 	previous = 07994064c
