--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_perception
-	base = c81dd02e2
-	trimbase = 
+	base = 449288468
+	trimbase = c81dd02e2
 	parent = upstream
 	previous = 5f2f6c31e
