--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_recognition_msgs
-	base = 06272d6fa
-	trimbase = 
+	base = 0c583ad01
+	trimbase = 06272d6fa
 	parent = upstream
 	previous = 5f2f6c31e
