--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_pcl_ros_utils
 	base = 03c209f67
-	trimbase = 82afc249b
+	trimbase = 
 	parent = upstream
 	previous = 07994064c
