--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_pcl_ros_utils
-	base = 572349a37
-	trimbase = 
+	base = 60e8158a9
+	trimbase = 572349a37
 	parent = upstream
 	previous = 5f2f6c31e
